--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "jest-environment-jsdom": "^29.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.27.0"
   }
 }
